Finish Static Pages

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,165 @@
 <% provide(:title,"Mentor Mentored") %>
-<h1>Sample App</h1>
-<p>
-  This is the home page for the
-  <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  sample application.
-</p>
+<div class="content">
+            <%= image_tag "whitenetwork.png", :class => "network" %>
+
+            <h1 class= "title">Connect, Guide, Follow, Enlighten</h1>
+            <p class="details">
+                That's our motto. Mentor Mentored is a new kind of matching service that's dedicated to
+                flexible education. If you've ever wanted to mentor somebody or needed a mentor,
+                we're a great place to start.
+            </p>
+
+           
+           <table align="center" width="85%">
+           <tr>
+           <td align="center">
+            <div id="loginbutton" align="center" style="font-family:Arial;">
+            <a href="/Default.aspx">LOG IN</a>
+            </div>
+            <br />
+            <div id="signupbutton" style="font-family:Arial;" align="center">
+            <a href="/signup/signup.aspx">SIGN UP</a>
+            </div>
+            </td>
+            </tr>
+            </table>
+            <h1 class= "title">How It Works:</h1>
+            <h2 class= "subtitle">It's easy as 1, 1.5, 2, 3</h2>
+            <p class="step">
+                <i>Step 1:</i>
+            </p>
+            <p class="process">
+                 Sign Up as either a Mentor or a Mentee/Protege on our Veteran, Student, or Entrepreneur network.
+            </p>
+            <p class="step">
+                <i>Step 1.5:</i>
+            </p>
+            <p class="process">
+                 (Optional) Specify the free spots on your weekly schedule and your preferred way of communicating. This is completely optional but it helps us find better Mentor/Mentee  matches.
+            </p>
+            <p class="step">
+                <i>Step 2:</i>
+            </p>
+            <p class="process">
+                 After your account is created, you can view our automatically generated list of suggestions (A list of Mentors if you're a Mentee and a list of Mentees if you're a Mentor) as well as
+                do manual searches based on different criteria.
+            </p>
+            <p class="step">
+                <i>Step 3:</i>
+            </p>
+            <p class="process">
+                 When you find and connect to a good match, the contact information for each user is exchanged. From there, you have
+                complete freedom to plan and educate. Allons-y!
+            </p>
+
+        <h1 class="title">The Team</h1>    
+         <div class="member">
+           <%= image_tag  "Neil.png", :class => "photo" %>
+                  <p class="description">
+                    Neil Limaye - CEO and Founder. Neil is a junior at Princeton High School.
+                </p>
+            </div>
+
+         <div class="member">
+            <%= image_tag "Kevin.png",:class => "photo" %>
+                  <p class="description">
+                   Kevin Ivanov - CMO. Kevin studies Computer Science at Rutgers University - New Brunswick.
+                </p>
+            </div>
+            <div class="member">
+                <%= image_tag "Matthew.png",:class => "photo" %>
+                  <p class="description">
+                    Matthew Wong - Outreach. Matt studies engineering at the University of Wisconsin - Madison.
+                </p>
+            </div>
+            <div class="member">
+                <%= image_tag "Peter.png",:class => "photo" %>
+                <p class="description">
+                    Peter Paine - Outreach. Peter is a junior at Saint Paul's School in Concord, New Hampshire.
+                </p>
+            </div>
+            <div class="member">
+                <%= image_tag "Gauthier.png",:class => "photo" %>
+                <p class="description">
+                    Gauthier Kreilmann - Development and Marketing. Gauthier studies Computer Science at American
+                    University
+                </p>
+            </div>
+
+            <div class="member">
+                <%= image_tag "Anik.png",:class => "photo" %>
+                <p class="description">
+                    Anik Patel - Development and Marketing. Anik studies Computer Science at Rensselaer Polytechnic
+                    Institute.
+                </p>
+            </div>            
+        <h1 class="title">Our Board of Advisors</h1>
+        <div class="member">
+            <%= image_tag "Hernandez.jpg",:class => "photo" %>
+            <p class="description">
+                Fernando Hernandez is the Director of Supplier Diversity and the Head of the Global
+                Procurement Group at Microsoft.
+            </p>
+        </div>
+        <div class="member">
+            <%= image_tag "Kreilmann.jpg",:class => "photo" %>
+            <p class="description">
+                Bernard Kreilmann is the current CEO of Ferrero USA. He studied Marketing at the
+                Ecole Pratique Hautes Etudes Commerciales and then went on to complete the Global
+                CEO Program at Wharton Business School.
+            </p>
+        </div>
+        <div class="member">
+            <%= image_tag "Lemenager.jpg",:class => "photo" %>
+            <p class="description">
+                Steve Lemenager, graduate of Bowdoin (B.A.) and Harvard (Ed. M.), is the former
+                admissions executive at Princeton and President of Edvice LLC.
+            </p>
+        </div>
+        <div class="member">
+            <%= image_tag "Paine.jpg",:class => "photo" %>
+            <p class="description">
+                Els Paine is the Associate Director of Princeton University's council on Science
+                and Technology. She obtained her A.B. in Biology from Princeton and an M.B.A. from
+                the Wharton School.
+            </p>
+        </div>
+        <div class="member">
+            <%= image_tag "Snyder.jpg",:class => "photo" %>
+            <p class="description">
+                Gary Snyder is the current principal of the Princeton High School in Princeton,
+                New Jersey.
+            </p>
+        </div>
+
+            <h1 class="title">Frequently Answered Questions</h1>
+         
+            <p class="question">
+                How is this different than other places to learn from?
+            </p>
+
+            <p class="answer">
+                What makes MM diferent from tutoring centers is that we take both the mentor and the mentee's
+                schedules and preferences into account when making matches. Most tutoring centers restrict each
+                party's schedule to the office's hours. Mentor Mentored is also over the internet, meaning that someone
+                from Florida can mentor someone from New Jersey just as easily as someone else from Florida. Lastly,
+                anybody can sign up as a Mentor in any subject, so 
+            </p>
+
+            <p class="question">
+                What if I want to tutor someone?
+            </p>
+
+            <p class="answer">
+                We use the term "mentor" because it encompasses all forms of education and guidance. Whether you want to
+                tutor, advise, mentor, or train someone, Mentor Mentored will find you somebody to help.
+            </p>
+
+            <p class="emailme"><a href="mailto:neil.limaye@mentormentored.org">More questions? Comments? Let me know by emailing me.</a></p>
+
+
+            <h1 class="title">Connect With Us</h1>
+            <p><a class="link" href="https://www.facebook.com/MentorMentored">Our Facebook Page</a></p>
+            <p><a class="link" href="http://eepurl.com/BwMZL">Subscribe to our newsletter</a></p>
+            <p><a class="link" href="https://www.twitter.com/MentorMentored">Our Twitter Feed</a></p>
+        </div>
