--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MentorMentored</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "defaults", "data-turbolinks-track" => true %>
+  <%= favicon_link_tag 'favicon.ico' %>
+  <%= stylesheet_link_tag "style1" %>
+  <!--<link rel="stylesheet" type="text/css" href="style/style1.css" />-->
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div class="header">
+		<%= image_tag "header.png", :class => "headerimg" %>
+    </div>
 
 <%= yield %>
 
