--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,13 +6,11 @@
   <%= javascript_include_tag "defaults", "data-turbolinks-track" => true %>
   <%= favicon_link_tag 'favicon.ico' %>
   <%= stylesheet_link_tag "style1" %>
-  <!--<link rel="stylesheet" type="text/css" href="style/style1.css" />-->
   <%= csrf_meta_tags %>
+  <%= render 'layouts/shim' %>
 </head>
 <body>
-	<div class="header">
-		<%= image_tag "header.png", :class => "headerimg" %>
-    </div>
+  <%= render 'layouts/header' %>
 
 <%= yield %>
 
