--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
 </head>
 <body>
   <%= render 'layouts/header' %>
-
-<%= yield %>
-
+  <div class="content">
+		<%= yield %>
+  </div>
 </body>
 </html>
