--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
   <%= render 'layouts/header' %>
   <div class="content">
 		<%= yield %>
+
+    <%= debug(params) if Rails.env.development? %>
   </div>
 </body>
 </html>
