--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,27 @@
 <% provide(:title, 'Sign up') %>
+<h1>Sign up</h1>
 
-	<h1>Sign up</h1>
-	<p>Find me in app/views/users/new.html.erb</p>
+<div class="row">
+  <div class="span6 offset3">
+    <%= form_for(@user) do |f| %>
+    <%= render 'shared/error_messages' %>
 
+      <%= f.label :First_Name %>
+      <%= f.text_field :First_Name %>
+
+      <%= f.label :Last_Name %>
+      <%= f.text_field :Last_Name %>
+
+      <%= f.label :email %>
+      <%= f.text_field :email %>
+
+      <%= f.label :password %>
+      <%= f.password_field :password %>
+
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.password_field :password_confirmation %>
+
+      <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+    <% end %>
+  </div>
+</div>
