--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,18 @@
 <div class="header">
 	<%= image_tag "header.png", :class => "headerimg" %>
+	<% if signed_in? %>
+	<div id="menu_container" >
+        <ul class="sf-menu" id="nav" >
+            <li style="margin-left:10%">
+               <%= link_to "usrename", {} %>    
+            </li>
+            <li>
+               <%= link_to "notif", {} %>
+            </li>
+            <li id="logout" style="margin-left:55%;">
+               <%= link_to "Log out", signout_path, method: "delete"  %>
+            </li>
+        </ul>
+	</div>
+	<% end %>
 </div>
