--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src='http://www.google.com/jsapi'></script>
+ <!-- <script src='www.google.com/jsapi'></script>-->
 	 <title><%= full_title(yield(:title)) %></title>
-  <%= stylesheet_link_tag    "application", media: "all"%>
+  <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag "application" %>
-  
   <%= favicon_link_tag 'favicon.ico' %>
   <%= stylesheet_link_tag "style1" %>
   <%= csrf_meta_tags %>
